[tool.poetry]
name = "ig_bot"
version = "0.1.0"
description = "Instagram video/photo downloader bot for Telegram"
authors = ["Danil Ineev <sai@notreally.media>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
